- It's now possible to specify instrumentation test runner arguments in
  build.gradle (in defaultConfig or per flavor):

    android {
      defaultConfig {
        testInstrumentationRunnerArguments size: "medium"
      }

      productFlavors {
        foo {
          testInstrumentationRunnerArguments foo: "bar"
        }
      }
    }

  or from the command line:

    INSTRUMENTATION_TEST_RUNNER_ARGS="size=medium,foo=bar" ./gradlew cC
    ./gradlew cC -Pcom.android.tools.instrumentationTestRunnerArgs=size=medium,foo=bar
- Arbitrary additional AAPT parameters can be set in build.gradle:
    android {
      aaptOptions {
        additionalParameters "--custom_option", "value"
      }
    }
- Resource names are validated before they are merged.
- When building aar, do not provide automatic @{applicationId} placeholder
  in manifest merger. Use a different placeholder like @{libApplicationId}
  and provide a value for it if applicationIds should be baked in the library.
- Introduce support for incremental compilation support with Jill and Jack. Change is purely
  internal and does not require DSL change nor can it be disabled.

1.2.0
- Unit testing improvements
  * Fixed task dependencies for library projects, so test classes should now
    be up-to-date when running tests.
  * Java-style resources are now put on the class path when running unit tests
    through Gradle.
  * Unit test configurations (e.g. testCompile) can now depend on AAR
    artifacts.
  * Fixes to mockable-android.jar: correct handling of enums, stripping the
    final modifier of public instance fields.
  * DSL: new code block for configuring the test tasks:
    android {
      testOptions {
        unitTest.all {
          jvmArgs '-XX:MaxPermSize=256m' // Or any other gradle option.
        }
      }
    }

  * Variants API: unit-testing variants are now exposed in the API and can be
    manipulated (e.g. by calling addJavaSourceFoldersToModel).
    android {